tests/sumo/meso/junction_control/tls_coordination/bad/control/output.sumo.meso
Loading net-file from 'net.net.xml' ... done (4ms).
Loading additional-files from 'input_additional.add.xml' ... done (1ms).
Loading done.
Simulation version v1_5_0+0174-0b4d252505 started with time: 0.00
Simulation ended at time: 198.00
Reason: All vehicles have left the simulation.
Performance: 
 Duration: 9ms
 Real time factor: 22000
 UPS: 245333.333333
Vehicles: 
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg):
 RouteLength: 300.00
 Speed: 4.30
 Duration: 73.60
 WaitingTime: 4.93
 TimeLoss: 51.50
 DepartDelay: 0.00

